benchmark/temporary_testing_version/output_S002a_v5_commit_65fe93_epoch80000_tuning_batch96_train_step_2M_INIT_LR_10-5
  File "main_model_tuning.py", line 271
    df = pd.DataFrame(data={'matches':str(matches[best]) + '/' + str(length)),
                                                                            ^
SyntaxError: invalid syntax
